--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,6 @@
-// @tailwind utilities;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html,
 body {
@@ -10,4 +12,8 @@ body {
 html,
 body {
   height: 100%;
+}
+
+h1 {
+  @apply text-3xl font-bold;
 }
