--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -1,11 +1,3 @@
 .button {
-    border-radius: 9px;
-    padding: 7px 9px;
-    border: none;
-    background-color: #a535a5;
-    font-size: 14px;
-    &:hover {
-        cursor: pointer;
-
-    }
+    @apply bg-[#a535a5] rounded-2xl transition-colors duration-300 ease-linear py-2 px-11 hover:bg-[#a535a596];
 }
