--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -1,3 +1,3 @@
 .button {
-    @apply bg-[#a535a5] rounded-2xl transition-colors duration-300 ease-linear py-2 px-11 hover:bg-[#a535a596];
+    @apply bg-[#a535a5] rounded-2xl transition-colors duration-300 ease-linear py-2 hover:bg-[#a535a596] w-full;
 }
