some styles have been changed

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -5,7 +5,7 @@
 html,
 body {
   color: #eeeded;
-  background: linear-gradient(to top right, #140206, #793f5b), #57373e;
+  background: linear-gradient(to top right, #140206, #38031c), #3a1f25;
   text-decoration:none;
 }
 
