--- a/src/components/ui/field/Field.module.scss
+++ b/src/components/ui/field/Field.module.scss
@@ -1,5 +1,5 @@
 .field {
-    @apply flex items-center mt-5 relative;
+    @apply flex items-center relative;
     input {
         @apply border-none outline-none bg-transparent placeholder:text-[#5c5b5a]  
         placeholder:transition-colors placeholder:duration-300 placeholder:ease-linear;
