--- a/src/components/ui/field/Field.module.scss
+++ b/src/components/ui/field/Field.module.scss
@@ -1,7 +1,7 @@
 .field {
     @apply flex items-center relative;
     input {
-        @apply border-none outline-none bg-transparent placeholder:text-[#5c5b5a]  
+        @apply border-none outline-none bg-transparent  
         placeholder:transition-colors placeholder:duration-300 placeholder:ease-linear placeholder:text-white text-white;
     }
 
