--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,3 +15,18 @@ input:-webkit-autofill {
   transition-delay: 9999s;
   transition-property: background-color;
 }
+
+.animation-slide-fade {
+  animation: slideFade .7s;
+}
+
+@keyframes slideFade{
+  from {
+    transform: translateY(-25px);
+    opacity: 0.4;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
